syntax = "proto3";
package dydxprotocol.clob;

import "gogoproto/gogo.proto";

option go_package = "github.com/StreamFinance-Protocol/stream-chain/protocol/x/clob/types";

// LiquidationsConfig stores all configurable fields related to liquidations.
message LiquidationsConfig {
  // The maximum liquidation fee (in parts-per-million). This fee goes
  // 100% to the insurance fund.
  uint32 max_liquidation_fee_ppm = 1;

  // Limits around how many quote quantums from a single subaccount can
  // be liquidated within a single block.
  SubaccountBlockLimits subaccount_block_limits = 2
      [ (gogoproto.nullable) = false ];
}

// SubaccountBlockLimits stores all configurable fields related to limits
// around how many quote quantums from a single subaccount can
// be liquidated within a single block.
message SubaccountBlockLimits {

  // The maximum insurance-fund payout amount for a given subaccount
  // per block. I.e. how much it can cover for that subaccount.
  uint64 max_quantums_insurance_lost = 1;
}